Photos: Minor fixes to Gutenberg implementation, including: * Add support for responsive embeds, and styles to makes sure wide and full videos fill available space. * Update button style selectors, and custom colour selectors, to make sure buttons have fallback when they have colour classes from previous themes. * Centre text, bullets in centred widgets, to match editor styles. * Update selector for links in editor. * Align text left/right for full-aligned latest comments widget. * Add a max-content width for the blocks in the editor. * Remove border radius from code block in editor.

--- a/photos/editor-blocks.css
+++ b/photos/editor-blocks.css
@@ -72,12 +72,9 @@ Description: Gutenberg Block Editor Styles
 	margin-right: auto;
 }
 
-a,
-a:link,
-a:visited,
-a:hover,
-a:focus,
-a:active {
+.edit-post-visual-editor a,
+.editor-block-list__block a,
+.wp-block-freeform.block-library-rich-text__tinymce a {
 	color: #d63031;
 }
 
@@ -179,6 +176,12 @@ a:active {
 /*--------------------------------------------------------------
 2.0 General Block Styles
 --------------------------------------------------------------*/
+
+/* Main content width */
+
+.wp-block {
+	max-width: 670px; /* 640px + 30px for editor padding */
+}
 
 /* Alignments */
 .alignfull {
@@ -527,6 +530,7 @@ blockquote p:last-child {
 
 .wp-block-code {
 	border: none;
+	border-radius: 0;
 }
 
 .wp-block-code .editor-plain-text {
@@ -752,10 +756,18 @@ blockquote p:last-child {
 4.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
+/* Categories, Latest Posts & Archives */
+
 .block-editor ul.wp-block-archives,
 .block-editor ul.wp-block-categories,
 .block-editor ul.wp-block-latest-posts {
 	padding-left: 1em;
+}
+
+[data-align="center"] .wp-block-categories ul,
+[data-align="center"] .wp-block-latest-posts ul,
+[data-align="center"] .wp-block-archives ul {
+	list-style-position: inside;
 }
 
 .rtl .block-editor ul.wp-block-archives,
